# sf_businesses

./: .gitignore  DEPLOYMENT.md  README.md  SPATIAL_OPTIMIZATION_REPORT.md  analytics_summary.py  analyze_data.py  api_client.py  benchmark_performance.py  building_aggregator.py  data_migration.py  data_pipeline.py  fast_spatial_aggregator.py  main.py  monitoring.py  my-little-soda.toml  optimized_aggregator.py  osm_buildings.py  parallel_spatial_aggregator.py  postgis_config.json  postgis_setup.py  postgres_connection.py  progressive_loader.py  pyproject.toml  quality_metrics.py  quick_aggregator.py  refresh.py  robust_spatial_aggregator.py  setup-deployment.sh  sf_businesses.duckdb  spatial_join.py  test_progressive_performance.py  test_webgl_performance.py  validation.py  web_api.py
.flox/env/: manifest.toml
.github/workflows/: data-monitoring.yml  data-refresh.yml  flox-deployment.yml
cache/: refresh_state.json
cache/metadata/: g8m3-pdis_metadata.json
cache/refresh_logs/: refresh_202509.jsonl
output/: buildings_businesses_fast.parquet  buildings_enriched_quick.parquet  buildings_quick.geojson  business_building_matches.parquet  business_grid_fast.parquet  business_grid_quick.parquet  business_grid_robust.parquet  business_quality_metrics.json  fast_aggregation_stats.json  last_update.txt  performance_benchmark.json  quality_metrics_20250916_120154.json  quick_aggregation_stats.json  robust_aggregation_stats.json  spatial_join_summary.parquet  validation_report.json
output/cache/: Registered_Business_Locations_-_San_Francisco_20250916_metadata.json  (+1 more)
(+5 files in other folders)
