[project]
name = "sf-businesses"
version = "0.1.0"
description = "SF Business Data Ingestion Pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.33.1",
    "requests>=2.31",
    "connectorx>=0.3",
    "shapely>=2.1.1",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "geojson>=3.0.0",
    "rtree>=1.4.1",
    "psycopg2-binary>=2.9.10",
    "aiohttp>=3.8.0",
]
